test_scores/negative_dimers/features/O94868.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O94868.pkl.xz